--- a/artikel.html
+++ b/artikel.html
@@ -17,7 +17,11 @@
 						<h2><a href="seledri.html">Cara Menanam Seledri</a></h2>
 						<h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
-					<p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..</p>
+					<p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
 				</article>    
 				<article>
 					<figure>
@@ -28,7 +32,11 @@
 						<h2><a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a></h2>
                         <h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
-					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..</p>
+					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
 				</article>
 				<article>
 					<figure>
@@ -39,7 +47,11 @@
 						<h2><a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a></h2>
 						<h3 style="color:#ed7b42">Buah - buahan</h3>
 					</hgroup>
-					<p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..</p>
+					<p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
 				</article>    
 				<article><article>
 					<figure>
@@ -50,7 +62,12 @@
 						<h2><a href="kelengkeng.html">Cara Menanam Kelengkeng Merah Dalam Pot</a></h2>
 						<h3 style="color:#ed7b42">Buah- buahan</h3>
 					</hgroup>
-					<p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..</p>
+					<p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
+
 				</article>
 				<article><article>
 					<figure>
@@ -61,7 +78,11 @@
 						<h2><a href="anggur.html">Pembibitan Anggur</a></h2>
 						<h3 style="color:#ed7b42">Buah - buahan</h3>
 					</hgroup>
-					<p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..</p>
+					<p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
 				</article>
 				<article><article>
 					<figure>
@@ -72,7 +93,11 @@
 						<h2><a href="kemangi.html">Cara Menanam Kemangi</a></h2>
 						<h3 style="color:#47b34f">Sayuran</h3>
 					</hgroup>
-					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.</p>
+					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
+					<br>
+					<br>
+					<br></p>
+					<a href="">Read more >>></a>
 				</article>    
 			</section>
 			<aside>
@@ -80,7 +105,7 @@
 					<h2 style="color:#f2bb85">Bercocok Tani</h2>
 					<a href="index.html">Home</a>
 					<a href="about.html">About Us</a>
-					<a href="artikel.html">Article</a>
+					<a href="artikel.html">Artikel</a>
 					<a href="contact.html">Contact Us</a>
 				</section>
 			</aside>
