--- a/bayam merah.html
+++ b/bayam merah.html
@@ -13,20 +13,20 @@
             <img style="width: 220px; height:210px" src="bayam merah.jpg" alt="bayam merah" />
           </figure>
           <hgroup>
-            <h2>Cara Menanam Seledri</h2>
+            <h2>Cara Menanam Bayam Merah di Polybag</h2>
             <h3 style="color:#47b34f">Sayuran</h3>
           </hgroup>
-                  <p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki kandungan vitamin dan mineral yang lengkap diantaranya vitamin A,B,C dan K, selain itu mineral-mineral utama yang dimiliki  bayam adalah magnesium, zat besi, asam folat, kalsium, potasium dan sebagainya.
+                  <p align="justify">Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki kandungan vitamin dan mineral yang lengkap diantaranya vitamin A,B,C dan K, selain itu mineral-mineral utama yang dimiliki  bayam adalah magnesium, zat besi, asam folat, kalsium, potasium dan sebagainya.
 Jika anda tertarik untuk membudidayakannya, berikut ini ulasan Cara Menanam Bayam Merah di Polybag :
 Metode penanaman bayam yang akan kita uraikan disini adalah menggunakan metode penanaman organik, dimana sayuran organik ini lebih sehat dan aman untuk dikonsumsi.<p>
 <br><p>1.PERSIAPAN BENIH</p>
-<p>Sebelum anda memulai menanam bayam, hal penting yang harus anda lakukan adalah memilih benih bayam berkualitas unggul, karena benih merupakan salah satu hal yang menentukan keberhasilan budidayanya. Benih bayam saat ini dapat diperoleh dengan mudah di toko-toko pertanian.
+<p align="justify">Sebelum anda memulai menanam bayam, hal penting yang harus anda lakukan adalah memilih benih bayam berkualitas unggul, karena benih merupakan salah satu hal yang menentukan keberhasilan budidayanya. Benih bayam saat ini dapat diperoleh dengan mudah di toko-toko pertanian.
 Benih bayam tidak melalui proses penyemaian, melainkan langsung ditanam pada media tanam.</p>
 <br><p>2.PERSIAPAN MEDIA TANAM</p>
-<p>Siapkan wadah untuk media tanam berupa polybag, bisa juga menggunakan pot atau yang lainnya, yang terpenting adalah wadah tersebut memiliki lubang-lubang kecil agar air tidak menggenang.
+<p align="justify">Siapkan wadah untuk media tanam berupa polybag, bisa juga menggunakan pot atau yang lainnya, yang terpenting adalah wadah tersebut memiliki lubang-lubang kecil agar air tidak menggenang.
 Selanjutnya siapkan media tanam berupa campuran tanah humus, arang sekam dan pupuk kompos/pupuk kandang dengan perbandingan 1:1:1, bahan-bahan tersebut perlu diberikan pada media tanam supaya menghasilkan media tanam yang subur tanpa perlu melakukan pemupukan secara kimiawi. Kemudian masukkan media tanam tersebut ke dalam polybag.</p>
 <br><p>3.TAHAP PENANAMAN<p>
-<p>Taburkan benih bayam merah diatas media pada polybag secara merata, jangan terlalu padat, karena jika terlalu padat akan terjadi perebutan unsur hara dan sinar matahari sehingga menyebabkan pertumbuhannya lambat. Perkiraan untuk satu polybag dengan diameter 30 cm adalah sekitar 50 biji.
+<p align="justify">Taburkan benih bayam merah diatas media pada polybag secara merata, jangan terlalu padat, karena jika terlalu padat akan terjadi perebutan unsur hara dan sinar matahari sehingga menyebabkan pertumbuhannya lambat. Perkiraan untuk satu polybag dengan diameter 30 cm adalah sekitar 50 biji.
 Taburkan abu sekam atau abu pembakaran di atasnya, tipis saja sacara merata, tujuannya untuk melindunginya dari hama seperti siput dan juga abu sekam ini mengandung belerang yang sangat tinggi sehingga dapat memacu pertumbuhan benih agar lebih cepat.
 Siram menggunakan air secara hati-hati agar benih tidak larut terbawa air mengingat benih bayam bentuknya sangat kecil.
 Untuk penyiraman berikutnya dilakukan secara rutin 2 kali sehari.
