--- a/form.artikel.html
+++ b/form.artikel.html
@@ -17,49 +17,22 @@
           <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="artikel.html">Artikel</a>
+          <a href="">Buat Artikel</a>
           <a href="contact.html" style="color:#f2bb85;">Contact Us</a>
         </div>
       </div>
-
-      <div class="utama"> </div>
-       <div class="kiri">
-        <p>
-        <img src="address.png" alt="" style="float:left;width:42px;height:42px;">
-        <h2><p>Alamat<p></h2>
-        <p>Jl. Bangka Raya No.208, Kel. Sumbersari,<br>
-        Kec. Sumbersari. Kab. Jember</p>
-       </p>
-      <p>
-        <img src="telephone.png" alt="" style="float:left;width:42px;height:42px;">
-        <br><br><h2><p>Telephone</p></h2>
-        <p>082331588737</p>
-      </p>
-      <p>
-        <img src="gmail.png" alt="" style="float:left;width:42px;height:42px;">
-       <br><br> <h2><p>G-Mail</p></h2>
-        <p>BelajarTani@gmail.com</p>
-      </p>
-
-    <br><br><p style="font-size:50px;float:center;font-style: italic texr">Let's Connect!!!</p>
-        </div>
-      </div>
-      <div class="kotak_pesan"> 
-  <form>
+      <form>
     <label>Nama</label>
     <input type="text" name="username" class="form_pesan" placeholder="Namamu sayang">
      <label>E-Mail</label>
     <input type="text" name="E-Mail" class="form_pesan" placeholder="Sama E-Mailnya">
       <label>Pesan</label>
     <textarea id="subject" name="subject" placeholder="Menurut saya.." style="height:200px;font-size: 13pt"></textarea>
-    <br><input onclick="myFunction()" type="submit" class="tombol_pesan" value="Kirim Pesan">
-    <script>
-      function myFunction() {
-      alert("Terima Kasih atas tanggapan anda :). Semoga Artikel Ini dapat bermanfaat buat kita semua.");}
-    </script>
+    <br><input type="submit" class="tombol_pesan" value="Kirim Pesan">
   </form>
   
-</div>
-       <div class="kaki">
+      </div>
+        <div class="kaki">
           <div class="logo2">
             Belajar Tani
           </div>
@@ -74,18 +47,6 @@
         </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
