--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       </div>
       <div class="utama">
         <p>"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
+        <div class="mulai-belajar"> 
+          <div class="mulai-belajar-content">
+            <a href="artikel.html"><img src="diet.png"></a>
+            <a href="artikel.html" style="font-size: 30px; color:black">MULAI BELAJAR</a>
+          </div>
+        </div>
       </div>
 
       <div class="cara-kerja"> 
@@ -38,11 +44,9 @@
           <p> TERAPKAN</p>
         </div>
       </div>
-
-      </div>
-<div class="kaki">
+        <div class="kaki">
           <div class="logo2">
-            Belajar Tani
+            Bercocok Tani
           </div>
           <div class="kontak">
             <div class="kontak1">
