--- a/kelengkeng.html
+++ b/kelengkeng.html
@@ -16,27 +16,27 @@
             <h2>Cara Menanam Kelengkeng Merah Dalam Pot</h2>
             <h3 style="color:#47b34f">Sayuran</h3>
           </hgroup>
-                  <p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang berwarna sangat menarik yaitu merah, bahkan hampir semua  bagian pohon ini memiliki warna merah, mulai dari daun, batang hingga buahnya berwarna merah, dan juga memiliki tingkat kemanisan paling tinggi yaitu mencapai 21 bricks.Kelengkeng merah mampu tumbuh subur pada segala jenis dataran baik dataran rendah maupun tinggi.
+                  <p align="justify">Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang berwarna sangat menarik yaitu merah, bahkan hampir semua  bagian pohon ini memiliki warna merah, mulai dari daun, batang hingga buahnya berwarna merah, dan juga memiliki tingkat kemanisan paling tinggi yaitu mencapai 21 bricks.Kelengkeng merah mampu tumbuh subur pada segala jenis dataran baik dataran rendah maupun tinggi.
 Kelengkeng ini sangat cocok ditanam pada pot atau sebagai  tabulampot, posturnya yang pendek dan posturnya yang rajih menjadi keunggulan tersendiri.
 Jika anda tertarik untuk menanamnya, berikut ini Cara Menanam Kelengkeng Merah Dalam Pot.</p>
 <br><p>PERSIAPAN MEDIA TANAM</p>
-<p>Dalam budidaya tanaman buah dalam pot atau tabulampot, media tanam yang baik merupakan satu syarat agar proses pertumbuhan tanaman lebih optimal, karena persediaan unsur hara yang dibutuhkan tanaman terbatas hanya dalam pot, tidak sebebas seperti tanaman yang ditanam langsung pada tanah.</p>
+<p align="justify">Dalam budidaya tanaman buah dalam pot atau tabulampot, media tanam yang baik merupakan satu syarat agar proses pertumbuhan tanaman lebih optimal, karena persediaan unsur hara yang dibutuhkan tanaman terbatas hanya dalam pot, tidak sebebas seperti tanaman yang ditanam langsung pada tanah.</p>
 <p>Adapun media tanam kelengkeng merah yang baik adalah dengan komposisi sebagai berikut:</p>
-<p>1.  Tanah ( usahakan tanah berpasir )</p>
-<p>2.  Pupuk kandang yang telah matang , pupuk kandang yang baik untuk tabulampot adalah pupuk kandang dari kotoran kambing karena pupuk ini dapat mengikat air dan mengandung unsur hara makro dan mikro yang lengkap, diantaranya kalium dan fosfor yang tinggi.</p>
-<p>3.  Arang sekam, arang sekam ini sangat baik sebagai campuran media tanam tabulampot, karena dapat membuat media tidak mudah padat, rongga dalam media lebih terbuka, sehingga proses aerasi/ pertukaran udara lebih lancar dan mempermudah proses penyerapan air. Selain itu arang sekam juga banyak mengandung unsur silica dan belerang yang baik untuk tanaman.</p>
-<p>4.  Kapur pertanian/dolomit, kapur ini berfungsi untuk menetralkan pH tanah.</p>
-<p>5.  Pupuk NPK yang berfungsi untuk mendukung proses pertumbuhan vegetatif awal tanaman dan pupuk TSP/SP36 yang berfungsi untuk merangsang pertumbuhan akar.</p>
-<p>Campurkan 3 komponen utama  yaitu tanah, pupuk kandang dan arang sekam dengan perbandingan 2:1:1, tambahkan pula dolomit ¼-1/2 kg per 1 planterbag/pot ukuran 100 liter. Campurkan semua bahan dan aduk hingga merata.
+<p align="justify">1.  Tanah ( usahakan tanah berpasir )</p>
+<p align="justify">2.  Pupuk kandang yang telah matang , pupuk kandang yang baik untuk tabulampot adalah pupuk kandang dari kotoran kambing karena pupuk ini dapat mengikat air dan mengandung unsur hara makro dan mikro yang lengkap, diantaranya kalium dan fosfor yang tinggi.</p>
+<p align="justify">3.  Arang sekam, arang sekam ini sangat baik sebagai campuran media tanam tabulampot, karena dapat membuat media tidak mudah padat, rongga dalam media lebih terbuka, sehingga proses aerasi/ pertukaran udara lebih lancar dan mempermudah proses penyerapan air. Selain itu arang sekam juga banyak mengandung unsur silica dan belerang yang baik untuk tanaman.</p>
+<p align="justify">4.  Kapur pertanian/dolomit, kapur ini berfungsi untuk menetralkan pH tanah.</p>
+<p align="justify">5.  Pupuk NPK yang berfungsi untuk mendukung proses pertumbuhan vegetatif awal tanaman dan pupuk TSP/SP36 yang berfungsi untuk merangsang pertumbuhan akar.</p>
+<p align="justify">Campurkan 3 komponen utama  yaitu tanah, pupuk kandang dan arang sekam dengan perbandingan 2:1:1, tambahkan pula dolomit ¼-1/2 kg per 1 planterbag/pot ukuran 100 liter. Campurkan semua bahan dan aduk hingga merata.
 Diamkan campuran media tersebut di tempat terbuka selama 1-2 minggu dengan tujuan untuk menetralisasi racun-racun yang masih ada dalam media, supaya dapat menguap ke udara.
 Media tanam yang sudah siap digunakan ditandai dengan tumbuhnya rumput-rumput liar di permukaan media tersebut.</p>
 <br><p>PERSIAPAN BIBIT</p>
-<p>Bibit tanaman merupakan hal  yang sangat menentukan tingkat keberhasilan tabulampot. Terdapat dua jenis bibit tanaman kelengkeng, yaitu bibit hasil perbanyakan generatif (dari biji) dan bibit hasil perbanyakan vegetatif (cangkok, okulasi dan penyambungan).</p>
-<p>Untuk budidaya tabulampot sebaiknya gunakan bibit hasil perbanyakan vegetatif. Kelebihan bibit hasil vegetatif yaitu sifat tanamannya bisa dipastikan, karena sama dengan sifat induknya. Selain itu, bibit perbanyakan vegetatif lebih cepat berbuah.
+<p align="justify">Bibit tanaman merupakan hal  yang sangat menentukan tingkat keberhasilan tabulampot. Terdapat dua jenis bibit tanaman kelengkeng, yaitu bibit hasil perbanyakan generatif (dari biji) dan bibit hasil perbanyakan vegetatif (cangkok, okulasi dan penyambungan).</p>
+<p align="justify">Untuk budidaya tabulampot sebaiknya gunakan bibit hasil perbanyakan vegetatif. Kelebihan bibit hasil vegetatif yaitu sifat tanamannya bisa dipastikan, karena sama dengan sifat induknya. Selain itu, bibit perbanyakan vegetatif lebih cepat berbuah.
 Pilihlah bibit yang kita tahu persis sifat-sifatnya, sehat, dan juga bebas dari hama dan penyakit tanaman.
 Bibit kelengkeng merah yang siap tanam ditandai dengan bibit yang dorman atau tidak sedang tumbuh pupus/tunas baru dan tidak memiliki daun muda. Secara kasat mata terlihat semua daunnya tampak tua. Karena jika bibit ditanam saat aktif tumbuh tunas/pupus/daun muda bibit mudah stres.</p>
 <br><p>TAHAP PENANAMAN</p>
-<p>Siapkan pot/planterbag ukuran 50×50 atau kapasitas 100 liter sebagai wadah media tanam. Masukkan kerikil-kerikil atau pecahan genteng pada dasar pot, agar resapan air lebih optimal dan tidak menggenang di dalamnya.
+<p align="justify">Siapkan pot/planterbag ukuran 50×50 atau kapasitas 100 liter sebagai wadah media tanam. Masukkan kerikil-kerikil atau pecahan genteng pada dasar pot, agar resapan air lebih optimal dan tidak menggenang di dalamnya.
 Masukkan media tanam ke dalam pot ¼ bagian terlebih dahulu, tambahkan pupuk dasar berupa pupuk NPK sebanyak 30 gram dan TSP 50 gram. Tambahkan kembali media hingga setengah bagian pot.
 Buka polybag bibit tanaman dengan hati-hati agar medianya tidak pecah, letakkan tepat ditengah-tengah pot, atur peletakan agar tanaman tegak lurus/tidak miring, timbun dengan media tanam yang sama hingga pangkal batang.
 Padatkan media tanam secara perlahan, pastikan tanaman sudah kuat tertopang, kemudian siram dengan air hingga jenuh untuk mempertahankan kelembaban.
