--- a/kemangi.html
+++ b/kemangi.html
@@ -16,23 +16,23 @@
             <h2>Cara Menanam Seledri</h2>
             <h3 style="color:#47b34f">Sayuran</h3>
           </hgroup>
-                   <p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
+                   <p align="justify">Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
           Daun kemangi mempunyai aroma khas yang diyakini dapat menambah cita rasa pada makanan.
 
           Menanam kemangi sangat mudah untuk dilakukan, penanaman bisa dilakukan di berbagai lahan, baik itu langsung ditanam di lahan, polybag maupun pot. Kemangi juga bisa ditanam di pekarangan rumah, sehingga anda dapat mencukupi kebutuhan kemangi untuk keluarga melalui tangan anda sendiri. Agar lebih sehat terutama untuk konsumsi pribadi, kemangi juga dapat ditanam secara organik.
 
           Jika anda tertarik untuk menanamnya, berikut ini penjelasan lengkap mengenai cara menanam kemangi   pada polybag secara organik.</p>
           <br><p>1.PERSIAPAN BENIH</p>
-          <p>Sebelum melakukan penanaman langkah awal adalah mempersiapkan benih, pilihlah benih yang berkualitas unggul agar memperoleh tanaman kemangi yang berkualitas unggul pula.
+          <p align="justify">Sebelum melakukan penanaman langkah awal adalah mempersiapkan benih, pilihlah benih yang berkualitas unggul agar memperoleh tanaman kemangi yang berkualitas unggul pula.
           Benih/biji kemangi dapat diperoleh dari bunga kemangi yang telah matang dari pohonnya dan dari tanaman yang telah tua. Biji kemangi yang telah siap untuk digunakan mempunyai ciri yaitu berwarna hitam, kering dan benih berasal dari tanaman yang sudah tua.</p>
         <br><p>2.TAHAP PERSEMAIAN</p>
-        <p>Sebelum ditanam, benih kemangi perlu disemai terlebih dahulu. Proses persemaian diawali dengan mempersiapkan media semai, media semai yang digunakan cukup sederhana yaitu berupa komposisi tanah humus dan arang sekam dengan perbandingan 1:1, campurkan keduanya hingga merata.
+        <p align="justify">Sebelum ditanam, benih kemangi perlu disemai terlebih dahulu. Proses persemaian diawali dengan mempersiapkan media semai, media semai yang digunakan cukup sederhana yaitu berupa komposisi tanah humus dan arang sekam dengan perbandingan 1:1, campurkan keduanya hingga merata.
         Masukkan media semai tersebut ke dalam wadah persemaian berupa pot, polybag maupun baki persemaian, rapikan permukaannya.
         Taburkan benih pada media semai tersebut secara merata, tutup tipis menggunakan tanah halus, kemudian siram persemaian hingga jenuh air.
         Simpan persemaian di tempat teduh yang tidak terkena sinar matahari secara langsung selama proses persemaian.
         Setelah 3 minggu dari persemaian benih kemangi sudah tumbuh menjadi bibit kemangi yang siap untuk dipindah tanam pada polybag.</p>
         <br><p>3.TAHAP PENANAMAN</p>
-        <p>Siapkan media tanam dengan komposisi tanah, pupuk kandang dan arang sekam dengan perbandingan 1:1:1, campurkan semua bahan hingga merata.
+        <p align="justify">Siapkan media tanam dengan komposisi tanah, pupuk kandang dan arang sekam dengan perbandingan 1:1:1, campurkan semua bahan hingga merata.
         Masukkan media tanam tersebut ke dalam polybag hingga hampir penuh, penanaman bibit siap dilakukan.
         Penanaman bibit kemangi sebaiknya dilakukan pada sore hari
         Sebelum bibit hasil persemaian dipindah tanam pada polybag sebaiknya disiram terlebih dahulu agar memudahkan dalam pencabutan.
@@ -50,7 +50,7 @@
           <a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
           <a href="artik.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
           <a href="contact.html">Cara Menanam Kelengkeng Merah Dalam Pot</a>
-          <a href="contact.html">Pembibitan Anggur</a>
+          <a href="anggur.html">Pembibitan Anggur</a>
           <a style="color:#db5656" href="kemangi.html">Cara Menanam Kemangi</a>
         </section>
       </aside>
