--- a/pepaya.html
+++ b/pepaya.html
@@ -13,17 +13,17 @@
             <img style="width: 300px; height:230px" src="pepaya.jpg" alt="pepaya">
           </figure>
           <hgroup>
-            <h2>Cara Menanam Kelengkeng Merah Dalam Pot</h2>
+            <h2>Cara Menanam Pepaya di Pekarangan Rumah</h2>
             <h3 style="color:#47b34f">Buah-buahan</h3>
           </hgroup>
-                  <p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh dari proses penyemaian benih, bibit pepaya hasil persemaian benih yang sudah siap tanam adalah benih yang telah berumur 40-50 hari dengan ketinggian 15-25 cm.
+                  <p align="justify">Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh dari proses penyemaian benih, bibit pepaya hasil persemaian benih yang sudah siap tanam adalah benih yang telah berumur 40-50 hari dengan ketinggian 15-25 cm.
                   Jika bibit dibuat sendiri melalui proses persemaian maka 2 minggu sebelum bibit siap ditanam buatlah lubang tanam dengan ukuran 40x40x30 cm.</p>
-<p>Taburkan dolomit/kapur pertanian pada lubang tanam tersebut dengan dosis menyesuaikan pH tanah/keasaman tanah, jika pH tanah rendah dosisnya kurang lebih 1 kg/lubang tanam dan jika sedang 0,5 kg/lubang tanam, biarkan lubang tanam tersebut dalam keadaan terbuka selama 2 minggu.
+<p align="justify">Taburkan dolomit/kapur pertanian pada lubang tanam tersebut dengan dosis menyesuaikan pH tanah/keasaman tanah, jika pH tanah rendah dosisnya kurang lebih 1 kg/lubang tanam dan jika sedang 0,5 kg/lubang tanam, biarkan lubang tanam tersebut dalam keadaan terbuka selama 2 minggu.
 Jika penanaman lebih dari satu tanaman, maka jarak tanam yang disarankan adalah 2-2,5 m.</p>
-<p>Setelah lubang tanam dibiarkan selama 2 minggu, selanjutnya adalah melakukan penanaman bibit pepaya yang diawali dengan pemberian pupuk dasar.
+<p align="justify">Setelah lubang tanam dibiarkan selama 2 minggu, selanjutnya adalah melakukan penanaman bibit pepaya yang diawali dengan pemberian pupuk dasar.
 Pupuk dasar yang digunakan untuk penanaman pepaya adalah pupuk kandang, adapun pupuk kandang yang paling bagus adalah berasal dari kotoran kambing karena proses pelarutannya lebih lama dan dapat mengikat air dan banyak mengandung unsur hara makro dan mikro terutama kandungan kalsium dan fosfor yang tinggi yang sangat bagus untuk proses pertumbuhan tanaman buah pepaya.
 Masukkan pupuk kandang dan tanah galian atas ke dalam lubang tanam dengan perbandingan 1:1, aduk hingga merata.</p>
-<p>Buat lubang tanam di bagian tengah, tanam bibit pepaya pada lubang tanam tersebut, pilihlah bibit yang sehat dan pertumbuhannya baik. Tanam bibit sedikit agak dalam agar bibit dapat berdiri tegak, selanjutnya siram dengan air secukupnya. Agar bibit yang baru ditanam tidak terkena sinar matahari secara langsung maka buatlah naungan sementara di atas bibit, naungan sementara ini dapat dibuat dari pelepah batang pisang yang dibuat seperti huruf V terbalik yang ditancapkan di tanah.
+<p align="justify">Buat lubang tanam di bagian tengah, tanam bibit pepaya pada lubang tanam tersebut, pilihlah bibit yang sehat dan pertumbuhannya baik. Tanam bibit sedikit agak dalam agar bibit dapat berdiri tegak, selanjutnya siram dengan air secukupnya. Agar bibit yang baru ditanam tidak terkena sinar matahari secara langsung maka buatlah naungan sementara di atas bibit, naungan sementara ini dapat dibuat dari pelepah batang pisang yang dibuat seperti huruf V terbalik yang ditancapkan di tanah.
 Demikian cara menanam pepaya di pekarangan rumah, semoga artikel ini dapat menambah wawasan Anda dalam bercocok tanam dan bermanfaat untuk Anda.
 
         </article>    
