--- a/seledri.html
+++ b/seledri.html
@@ -16,25 +16,25 @@
             <h2>Cara Menanam Seledri</h2>
             <h3 style="color:#47b34f">Sayuran</h3>
           </hgroup>
-          <p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif. Perbanyakan generatif yaitu perbanyakan tanaman seledri dengan cara menyemai biji atau benih, sedangkan perbanyakan vegetatif yaitu perbanyakan tanaman seledri dengan anakan atau seledri muda yang tumbuh pada rumpun seledri dewasa.
+          <p align="justify">Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif. Perbanyakan generatif yaitu perbanyakan tanaman seledri dengan cara menyemai biji atau benih, sedangkan perbanyakan vegetatif yaitu perbanyakan tanaman seledri dengan anakan atau seledri muda yang tumbuh pada rumpun seledri dewasa.
           Perbanyakan vegetatif biasanya dilakukan pada budidaya seledri skala kecil, seperti banyak dilakukan oleh para pehoby karena dengan menanam anakan bisa lebih cepat panen dan tidak perlu melakukan proses penyemaian.
 Sedangkan jika menanam seledri dalam skala luas atau sebagai usaha, pilihan terbaik adalah perbanyakan generatif  yaitu dengan menyemai biji, karena dengan cara ini bisa mendapatkan benih seledri dalam jumlah banyak dengan mudah.
 Adapun cara menanam seledri adalah sebagai berikut :</p>
 <br><p>TAHAP PENYEMAIAN BENIH</p>
-<p>Proses penyemaian benih seledri hingga siap dipindah tanam, memerlukan waktu 3 minggu sampai 1 bulan tergantung perlakuan awal saat melakukan proses penyemaian. Untuk itu dalam melakukan penyemaian harus dilakukan dengan benar agar benih lebih cepat tumbuh, berikut ini langkah-langkahnya :</p>
+<p align="justify">Proses penyemaian benih seledri hingga siap dipindah tanam, memerlukan waktu 3 minggu sampai 1 bulan tergantung perlakuan awal saat melakukan proses penyemaian. Untuk itu dalam melakukan penyemaian harus dilakukan dengan benar agar benih lebih cepat tumbuh, berikut ini langkah-langkahnya :</p>
 <p>1.Persiapan benih</p>
-<p>Pilihlah benih seledri yang berkualitas unggul dan memiliki daya tumbuh yang tinggi. Benih seledri dapat didapatkan dengan mudah di toko-toko pertanian seperti SentraTani.com.
+<p align="justify">Pilihlah benih seledri yang berkualitas unggul dan memiliki daya tumbuh yang tinggi. Benih seledri dapat didapatkan dengan mudah di toko-toko pertanian seperti SentraTani.com.
 Untuk mempercepat pertumbuhan, terlebih dahulu rendam benih menggunakan air yang telah dicampur dengan pupuk hayati dengan dosis 1-2 ml/liter air selama kurang lebih 6 jam, atau jika tidak ada cukup rendam menggunakan air hangat kuku. Tiriskan benih dan diamkan selama satu malam.</p>
 <p>2.Persiapan media semai</p>
-<p>Media semai yang digunakan adalah tanah, pupuk kandang, arang sekam dan abu sekam dengan perbandingan 2:2:2:1, aduk dan campurkan hingga merata. Wadah persemaian yang akan digunakan adalah tray semai. Masukkan media ke dalam tray semai, kemudian siram hingga merata.</p>
+<p align="justify">Media semai yang digunakan adalah tanah, pupuk kandang, arang sekam dan abu sekam dengan perbandingan 2:2:2:1, aduk dan campurkan hingga merata. Wadah persemaian yang akan digunakan adalah tray semai. Masukkan media ke dalam tray semai, kemudian siram hingga merata.</p>
 <p>3.Penanaman biji</p>
-<p>Tanam biji seledri dengan membuat lubang tanam terlebih dahulu pada tray semai dengan kedalaman 0,5 cm. Masukkan 3-5 biji ke dalam setiap lubang tanam, karena biji seledri sangat kecil untuk memudahkan dalam penanaman dapat menggunakan pinset. Setelah selesai penanaman, siram kembali persemaian. Untuk mencegah datangnya hama semut, taburkan abu sekam atau abu pembakaran kayu di atas persemaian. Tutup persemaian menggunakan plastik gelap atau kain basah dan simpan di tempat teduh. Setelah 3 minggu dari persemaian biasanya benih sud ah tumbuh 2-5 cm.</p>
+<p align="justify">Tanam biji seledri dengan membuat lubang tanam terlebih dahulu pada tray semai dengan kedalaman 0,5 cm. Masukkan 3-5 biji ke dalam setiap lubang tanam, karena biji seledri sangat kecil untuk memudahkan dalam penanaman dapat menggunakan pinset. Setelah selesai penanaman, siram kembali persemaian. Untuk mencegah datangnya hama semut, taburkan abu sekam atau abu pembakaran kayu di atas persemaian. Tutup persemaian menggunakan plastik gelap atau kain basah dan simpan di tempat teduh. Setelah 3 minggu dari persemaian biasanya benih sud ah tumbuh 2-5 cm.</p>
 <br><p>TAHAP PENANAMAN BIBIT/PINDAH TANAM</p>
 <p>1.Persiapan lahan</p>
-<p>Gemburkan lahan dan buat bedengan dengan lebar 100 cm, tinggi 25-30 cm dan panjang sesuaikan dengan kondisi lahan. Karena tanaman seledri tidak membutuhkan sinar matahari dalam waktu yang lama, terlebih pada musim kemarau, maka dari itu buatlah naungan di atas bedengan menggunakan pelepah daun kelapa, paranet atau sejenisnya. Naungan dibuat menghadap ke timur dengan tinggi tiang depan 1-1,5 cm sedangkan tiang bagian belakang 50-75 cm.
+<p align="justify">Gemburkan lahan dan buat bedengan dengan lebar 100 cm, tinggi 25-30 cm dan panjang sesuaikan dengan kondisi lahan. Karena tanaman seledri tidak membutuhkan sinar matahari dalam waktu yang lama, terlebih pada musim kemarau, maka dari itu buatlah naungan di atas bedengan menggunakan pelepah daun kelapa, paranet atau sejenisnya. Naungan dibuat menghadap ke timur dengan tinggi tiang depan 1-1,5 cm sedangkan tiang bagian belakang 50-75 cm.
 Berikan pupuk dasar pada bedengan menggunakan pupuk kandang sebanyak 1 kg/meter persegi, dengan cara menaburkannya di atas bedengan dan campurkan dengan tanah bedengan hingga merata. Rapikan kembali permukaan bedengan. Siram bedengan menggunakan air yang telah dicampur dengan pupuk hayati, dan bedengan siap ditanami.</p>
 <p>2.Tahap penanaman</p>
-<p>Siram bibit terlebih dahulu sebelum dipindah tanam tujuannya agar media mudah lepas dari tray semai dan proses pengambilan bibit menjadi lebih mudah.
+<p align="justify">Siram bibit terlebih dahulu sebelum dipindah tanam tujuannya agar media mudah lepas dari tray semai dan proses pengambilan bibit menjadi lebih mudah.
 Penanaman dilakukan dengan mencongkel bibit dari tray semai beserta medianya dengan jarak tanam 20×20 cm. Untuk memudahkan penataan dalam penanaman, buatlah garis alur di atas bedengan. Jika bibit dalam satu lubang pot tray lebih dari satu, jangan dipisahkan terlebih dahulu, pemisahan dilakukan setelah tanaman tumbuh agak besar. Setelah selesai penanaman lakukan penyiraman, penyiraman selanjutnya dilakukan sebanyak 2 kali sehari, lakukan penyiraman secukupnya saja asal lembab.
 Demikian ulasan mengenai cara menanam seledri.</p></p>
        
@@ -42,7 +42,7 @@ Demikian ulasan mengenai cara menanam seledri.</p></p>
       </section>
       <aside>
         <section class="popular-recipes">
-          <h2> <a href="artikel.html" style="color:#db5656">Article</a></h2>
+          <h2> <a href="artikel.html" style="color:#db5656">Artikel</a></h2>
           <a style="color:#db5656" href="seledri.html">Cara Menanam Seledri</a>
           <a href="bayam merah.html">Cara Menanam Bayam Merah di Polybag</a>
           <a href="pepaya.html">Cara Menanam Pepaya di Pekarangan Rumah</a>
