--- a/anggur.html
+++ b/anggur.html
@@ -16,30 +16,30 @@
             <h2>Pembibitan Anggur</h2>
             <h3 style="color:#47b34f">Buah-buahan</h3>
           </hgroup>
-                  <p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti menggunakan biji atau pembibitan secara vegetatif seperti stek batang, grafting, cangkok dan sebagainya. Akan tetapi pada artikel kali ini akan kita bahas mengenai pembibitan tanaman anggur secara vegetatif yaitu grafting atau sambung pucuk.
+                  <p align="justify">Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti menggunakan biji atau pembibitan secara vegetatif seperti stek batang, grafting, cangkok dan sebagainya. Akan tetapi pada artikel kali ini akan kita bahas mengenai pembibitan tanaman anggur secara vegetatif yaitu grafting atau sambung pucuk.
 Sambung pucuk/grafting merupakan salah satu metode perbanyakan vegetatif buatan yang sudah lama dikenal dan digunakan masyarakat luas untuk memperbaiki sifat tanaman baik sifat yang berkaitan kualitas ataupun yang berkaitan dengan kuantitas.</p>
-<p>Pada prinsipnya, grafting adalah menggabungkan dua bagian tanaman yang masih hidup sedemikian rupa sehingga keduanya dapat bergabung menjadi satu tanaman yang utuh yang memiliki sifat kombinasi antara dua organ atau jaringan yang digabungkan tersebut.
+<p align="justify">Pada prinsipnya, grafting adalah menggabungkan dua bagian tanaman yang masih hidup sedemikian rupa sehingga keduanya dapat bergabung menjadi satu tanaman yang utuh yang memiliki sifat kombinasi antara dua organ atau jaringan yang digabungkan tersebut.
 Dua bagian tanaman yang disatukan pada umumnya adalah batang bawah dan batang atas. Bagian batang bawah yang memiliki perakaran dan menerima sambungan disebut dengan rootstock, understock, ataupun stock. Bagian atas yang digunakan untuk menyambung disebut dengan scion. Scion dapat berupa potongan batang atas/entres (cutting) atau juga dapat berupa mata tunas tanaman. Jika scion yang digunakan adalah cutting, maka disebut dengan grafting. Namun jika scion yang digunakan adalah mata tunas, maka disebut dengan penempelan, budding, atau okulasi.</p>
-<p>Berikut ini tahapan pembibitan anggur dengan cara sambung pucuk/grafting:
+<p align="justify">Berikut ini tahapan pembibitan anggur dengan cara sambung pucuk/grafting:
 Dalam pembuatan bibit anggur melalui grafting ada dua bagian penting yang harus siap dalam waktu bersamaan, bagian yang pertama adalah batang bawah yang bertugas untuk bertanggung jawab dalam sistem perakaran dan yang kedua adalah batang atas yang didapatkan dari pohon induk untuk kemudian disambungkan ke batang bawah.</p>
 <br><p>PERSIAPAN ALAT DAN BAHAN</p>
-<p> Pisau okulasi, cutter, silet, atau pisau apa saja asalkan tajam dan steril.</p>
-<p> Plastik PE 02 atau plastik es lilin untuk mengikat sambungan.</p>
-<p> Batang bawah dan batang atas</p>
+<p align="justify"> Pisau okulasi, cutter, silet, atau pisau apa saja asalkan tajam dan steril.</p>
+<p align="justify"> Plastik PE 02 atau plastik es lilin untuk mengikat sambungan.</p>
+<p align="justify"> Batang bawah dan batang atas</p>
 <br><p>PERSIAPAN BATANG BAWAH</p>
-<p>Batang bawah yang digunakan untuk grafting adalah bibit tanaman anggur yang berasal dari stek batang dari tanaman anggur lokal atau anggur impor yang terbukti perakarannya bagus yang ditanam dalam polybag, usahakan diameter batangnya kurang lebih sama dengan batang atas.
+<p align="justify">Batang bawah yang digunakan untuk grafting adalah bibit tanaman anggur yang berasal dari stek batang dari tanaman anggur lokal atau anggur impor yang terbukti perakarannya bagus yang ditanam dalam polybag, usahakan diameter batangnya kurang lebih sama dengan batang atas.
 Pilihlah bibit yang sehat, pertumbuhannya bagus dan kokoh.</p>
 <br><p>PERSIAPAN BATANG ATAS/ENTRES</p>
-<p>Tanaman anggur induk yang akan diambil batang atasnya harus berasal dari varietas unggul, produktif, sehat serta terbebas dari serangan hama dan penyakit.
+<p align="justify">Tanaman anggur induk yang akan diambil batang atasnya harus berasal dari varietas unggul, produktif, sehat serta terbebas dari serangan hama dan penyakit.
 Ambil entres dari pohon induk berupa cabang yang ujungnya tidak sedang tumbuh ( tidak terdapat daun muda/cabang dorman), sudah mulai muncul mata tunas yang nantinya akan menjadi tunas baru, potong entres dari pohon induk.
 Pangkas semua daunnya untuk mencegah penguapan yang tinggi. Pada saat pemangkasan daun lakukanlah dengan hati-hati agar tidak mengenai mata tunas, karena mata tunas berada pada ketiak daun.</p>
 <br><p>TAHAP PENYAMBUNGAN/GRAFTING</p>
-<p> Potong batang bawah kurang lebih 20 cm dari permukaan tanah.</p>
-<p> Batang bagian bawah dibelah sekitar 2-2,5 cm dengan menggunakan pisau, cutter atau silet tepat di tengah sehingga kedua sisinya sama.</p>
-<p> Entres yang sudah siap untuk disambungkan kemudian disayat kanan kirinya agar membentuk lancip seperti baji, panjang entres kira-kira 10 cm paling tidak memiliki satu mata tunas.</p>
-<p> Sisipkan pada belahan batang bawah, upayakan ukuran batang atas dan bawah kurang lebih sama, usahakan sambungan serapat mungkin dan tidak terdapat rongga.</p>
-<p> Kemudian ikat sambungan, jika menggunakan plastik es untuk mengikat maka ditarik terlebih dahulu agar memanjang kemudian dibelah menggunakan cutter/pisau.</p>
-<p> Ikat sambungan menggunakan plastik PE atau plastik es tersebut, dengan cara melilitnya yang dimulai dari bagian bawah ke atas dengan sistem pemasangan genting hingga seluruh bagian sambungan dan seluruh batang entres tertutup rapat.</p>
+<p align="justify"> Potong batang bawah kurang lebih 20 cm dari permukaan tanah.</p>
+<p align="justify"> Batang bagian bawah dibelah sekitar 2-2,5 cm dengan menggunakan pisau, cutter atau silet tepat di tengah sehingga kedua sisinya sama.</p>
+<p align="justify"> Entres yang sudah siap untuk disambungkan kemudian disayat kanan kirinya agar membentuk lancip seperti baji, panjang entres kira-kira 10 cm paling tidak memiliki satu mata tunas.</p>
+<p align="justify"> Sisipkan pada belahan batang bawah, upayakan ukuran batang atas dan bawah kurang lebih sama, usahakan sambungan serapat mungkin dan tidak terdapat rongga.</p>
+<p align="justify"> Kemudian ikat sambungan, jika menggunakan plastik es untuk mengikat maka ditarik terlebih dahulu agar memanjang kemudian dibelah menggunakan cutter/pisau.</p>
+<p align="justify"> Ikat sambungan menggunakan plastik PE atau plastik es tersebut, dengan cara melilitnya yang dimulai dari bagian bawah ke atas dengan sistem pemasangan genting hingga seluruh bagian sambungan dan seluruh batang entres tertutup rapat.</p>
         </article>    
       </section>
       <aside>
