--- a/artikel.html
+++ b/artikel.html
@@ -20,8 +20,8 @@
 					<p>Tanaman seledri bisa diperbanyak dengan cara generatif maupun vegetatif..
 					<br>
 					<br>
-					<br></p>
-					<a href="">Read more >>></a>
+					<br><br></p>
+					<a href="seledri.html">Read more >>></a>
 				</article>    
 				<article>
 					<figure>
@@ -34,9 +34,8 @@
 					</hgroup>
 					<p>Bayam merupakan salah satu jenis sayuran yang banyak digemari oleh masyarakat, hal ini dikarenakan bayam memiliki ..
 					<br>
-					<br>
 					<br></p>
-					<a href="">Read more >>></a>
+					<a href="bayam merah.html">Read more >>></a>
 				</article>
 				<article>
 					<figure>
@@ -49,9 +48,8 @@
 					</hgroup>
 					<p>Dalam budidaya tanaman pepaya langkah awal yang perlu dilakukan adalah menyiapkan bibit. Bibit pepaya dapat diperoleh ..
 					<br>
-					<br>
 					<br></p>
-					<a href="">Read more >>></a>
+					<a href="pepaya.html">Read more >>></a>
 				</article>    
 				<article><article>
 					<figure>
@@ -64,9 +62,8 @@
 					</hgroup>
 					<p>Kelengkeng Merah/ Ruby Longan tergolong kelengkeng yang eksklusif, karena memiliki keistimewaan pada tampilannya yang ..
 					<br>
-					<br>
 					<br></p>
-					<a href="">Read more >>></a>
+					<a href="kelengkeng.html">Read more >>></a>
 
 				</article>
 				<article><article>
@@ -80,9 +77,8 @@
 					</hgroup>
 					<p>Pembibitan tanaman anggur dapat dilakukan dengan berbagai cara, baik itu generatif seperti ..
 					<br>
-					<br>
 					<br></p>
-					<a href="">Read more >>></a>
+					<a href="anggur.html">Read more >>></a>
 				</article>
 				<article><article>
 					<figure>
@@ -95,9 +91,8 @@
 					</hgroup>
 					<p>Kemangi adalah salah satu jenis sayuran yang biasanya digunakan daunnya sebagai pelengkap dalam beberapa jenis masakan di Indonesia khususnya.
 					<br>
-					<br>
 					<br></p>
-					<a href="">Read more >>></a>
+					<a href="kemangi.html">Read more >>></a>
 				</article>    
 			</section>
 			<aside>
