--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
           </p>
         </div>
         <div class="menu1">
+          <a href="login.html" input type="submit" class="tombol_login" value="Login">
+            Login</a>
           <a href="index.html">Home</a>
           <a href="about.html">About Us</a>
           <a href="artikel.html">Artikel</a>
@@ -21,44 +23,43 @@
         </div>
       </div>
 
-      <div class="utama"> </div>
-       <div class="kiri">
-        <p>
-        <img src="address.png" alt="" style="float:left;width:42px;height:42px;">
-        <h2><p>Alamat<p></h2>
-        <p>Jl. Bangka Raya No.208, Kel. Sumbersari,<br>
-        Kec. Sumbersari. Kab. Jember</p>
-       </p>
-      <p>
-        <img src="telephone.png" alt="" style="float:left;width:42px;height:42px;">
-        <br><br><h2><p>Telephone</p></h2>
-        <p>082331588737</p>
-      </p>
-      <p>
-        <img src="gmail.png" alt="" style="float:left;width:42px;height:42px;">
-       <br><br> <h2><p>G-Mail</p></h2>
-        <p>BelajarTani@gmail.com</p>
-      </p>
+    <div class="container">
+  <form action="action_page.php">
 
-    <br><br><p style="font-size:50px;float:center;font-style: italic texr">Let's Connect!!!</p>
-        </div>
-      </div>
-      <div class="kotak_pesan"> 
-  <form>
-    <label>Nama</label>
-    <input type="text" name="username" class="form_pesan" placeholder="Namamu sayang">
-     <label>E-Mail</label>
-    <input type="text" name="E-Mail" class="form_pesan" placeholder="Sama E-Mailnya">
-      <label>Pesan</label>
-    <textarea id="subject" name="subject" placeholder="Menurut saya.." style="height:200px;font-size: 13pt"></textarea>
-    <br><input onclick="myFunction()" type="submit" class="tombol_pesan" value="Kirim Pesan">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+   <!--  <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+ -->
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write somethinga" style="height: 100px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+
+
+
+
+
+
+
+
+
     <script>
       function myFunction() {
       alert("Terima Kasih atas tanggapan anda :). Semoga Artikel Ini dapat bermanfaat buat kita semua.");}
     </script>
-  </form>
   
-</div>
        <div class="kaki">
           <div class="logo2">
             Belajar Tani
