--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Bercocok Tani</title>
     <link rel="stylesheet" href="about.css">
   </head>
   <body>
@@ -10,41 +10,42 @@
       <div class="kepala">
         <div class="Judul">
           <p>
-            <img src="plants.png" alt="" style="right:500px;width:50px;height:50px;">
             <a href="index.html">Bercocok Tani</a>
           </p>
         </div>
         <div class="menu1">
+          <a href="login.html" input type="submit" class="tombol_login" value="Login">
+            Login</a>
           <a href="index.html">Home</a>
           <a href="about.html" style="color:#f2bb85;">About Us</a>
-          <a href="artikel.html">Artikel</a>
-          <a href="contact.html">Contact Us</a>
+          <a href="artikel.html" >Artikel</a>
+          <a href="contact.html" >Contact Us</a>
         </div>
       </div>
-      <div class="utama">
+     <div class="utama">
         <h1><p style="font-size:50px;">About Us</p></h1>
-        <p> Belajar Tani merupakan program pengembangan pertanian melalui pendidikan bagi petani 
+        <br><p style= "text-indent: 60px">Belajar Tani merupakan program pengembangan pertanian melalui pendidikan bagi petani 
         ataupun calon petani. Belajar Tani didirikan pada tanggal 14 Oktober 2019, yang dikerjakan 
         bersama-sama dengan petani untuk menyelenggarakan beragam kegiatan produktif yang dapat 
         meningkatkan kualitas pertanian yang diusahakan oleh  petani.</p>
-        <p>Belajar Tani berada dibawah naungan PT Belajar Tani Agriteknologi Nusantara yang fokus 
+        <br><p style= "text-indent: 60px">Belajar Tani berada dibawah naungan PT Belajar Tani Agriteknologi Nusantara yang fokus 
         pada pengembangan iset dibidang pertanian dan sosial kemasyarakatan. Bercocok tani mendukung 
         manusia melenial yang dimana pada zaman ini semakin buruknya ilmu pertanian di kalangan milenial. 
         Dibuat berdasarkan program studi program website pada kuliah yang dimana ini akan menunjang bagaimana 
         caranya bercocok tanam yang baik dan benar. Berdasarkan riset yang telah dilakukan banyak milenial tidak 
         mengetahui sebagian besar tentang cara bercocok tanam. Dengan program ini, harapan besar kepada milenial 
         tentang ilmu pertanian tidak lepas dan bisa bermanfaaat untuk kemajuan masa depan negara.</p>
-        <h5><p style="font-size:35px">Visi</p></h5>
-        <p>Akses ilmu pertanian yang dapat menunjang berbagai kalangan</p>
-        <h4><p style="font-size:35px">Misi</p></h4>
-        <p> 1. Menyediakan berbagai sumber ilmu pertanian maupun mengedukasi bagi petani-petani amatir.
+        <br><br><h5><p style="font-size:35px">Visi</p></h5>
+        <br><p>Akses ilmu pertanian yang dapat menunjang berbagai kalangan</p>
+        <br><br><h4><p style="font-size:35px">Misi</p></h4>
+        <br><p> 1. Menyediakan berbagai sumber ilmu pertanian maupun mengedukasi bagi petani-petani amatir.
         <br> 2.  Dilakukan riset agar ilmu tidak ketinggalan zaman.
         <br>3.  Mencetak petani unggul dan berdaya saing
         <br>4.  Membuat daerah terpencil menjadi kawasan baru untuk bercocok tanam serta central pertanian yang baru.</p>
       </div> 
-        <div class="kaki">
+       <div class="kaki">
           <div class="logo2">
-            Bercocok Tani
+            Belajar Tani
           </div>
           <div class="kontak">
             <div class="kontak1">
@@ -55,6 +56,21 @@
             </div>
           </div>
         </div>
-    </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
