--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Bercocok Tani</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index2.css">
   </head>
   <body>
     <div class="all">
@@ -14,16 +14,23 @@
           </p>
         </div>
         <div class="menu1">
-          <a href="login.html" input type="submit" class="tombol_login" value="Login">
-            Login</a>
-          <a href="index.html" style="color:#f2bb85;">Home</a>
-          <a href="about.html">About Us</a>
+          <a href="login.html" input type="submit" class="tombol_login" value="Logout">
+            Log Out</a>
+          <a href="index2.html" style="color:#f2bb85;">Home</a>
+          <a href="about2.html">About Us</a>
           <a href="artikel.html">Artikel</a>
-          <a href="contact.html">Contact Us</a>
+          <a href="contact2.html">Contact Us</a>
         </div>
       </div>
       <div class="utama">
-        <p> "Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
+        <p>"Buah yang manis hanya bisa dipetik dari pemilihan bibit yang baik dan cara menanam yang benar"</p>
+        <!-- <div class="mulai-belajar"> 
+          <div class="mulai-belajar-content">
+            <a href="artikel.html"><img src="diet.png"></a>
+            <a href="artikel.html" style="font-size: 30px; color:black">MULAI BELAJAR</a>
+          </div>
+        </div> -->
+
       </div>
 
 <div class="text-search">
