--- a/daftar.html
+++ b/daftar.html
@@ -14,13 +14,13 @@
  
 		<form>
 			<label>Nama Lengkap</label>
-			<input type="text" name="nama lengkap" class="form_login" placeholder="Nama Lengkap ..">
+			<input type="text" name="nama lengkap" class="form_login" placeholder="Nama Lengkap .." required="required">
 
 			<label>Username</label>
-			<input type="text" name="username" class="form_login" placeholder="Username ..">
+			<input type="text" name="username" class="form_login" placeholder="Username .." >
 
 			<label>E-mail</label>
-			<input type="text" name="E-mail" class="form_login" placeholder="E-mail ..">
+			<input type="email" name="E-mail" class="form_login" placeholder="E-mail ..">
  
 			<label>Password</label>
 			<input type="password" name="password" class="form_login" placeholder="Password ..">
@@ -29,7 +29,7 @@
 			<input type="password" name="re-password" class="form_login" placeholder="Re-Password ..">
             
             <label>No.Telepon</label>
-			<input type="" name="nohp" class="form_login" placeholder="Nomer Telepon ..">
+			<input type="number" name="nohp" class="form_login" placeholder="Nomer Telepon ..">
 
 			<a href="index2.html" input type="submit" class="tombol_daftar" value="DAFTAR">
             DAFTAR</a>
